# Open-Source-Vision

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: detector.hpp  osvision.hpp
src/: CMakeLists.txt  Untitled-1.cpp  detector.cpp  detector.hpp  main.cpp  osvision.cpp
src/feed/: input.cpp  stream.cpp
tests/: CMakeLists.txt
